--- a/devjams/pubspec.yaml
+++ b/devjams/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.5
+  firebase_core: ^1.23.0
+  firebase_auth: ^3.10.0
+  firebase_storage: ^10.3.9
+  cloud_firestore: ^3.4.9
+  image_picker: ^0.8.5+3
 
 
   # The following adds the Cupertino Icons font to your application.
